# LEDController-Console

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  readme.md  todo.txt
res/shaders/: MatrixFragment.fs.glsl  MatrixVertex.vs.glsl
src/: Application.cpp  Application.hpp  Colour.cpp  Colour.hpp  ColourPalettes.cpp  ColourPalettes.hpp  Console.cpp  Console.hpp  EffectManager.cpp  EffectManager.hpp  ImguiManager.cpp  ImguiManager.hpp  ImguiWindow.hpp  LEDController.cpp  LEDController.hpp  LEDMatrix.cpp  LEDMatrix.hpp  LEDMatrixRenderer.cpp  LEDMatrixRenderer.hpp  Main.cpp  Socket.cpp  Socket.hpp  Window.cpp  Window.hpp
src/Effects/: EffectList.hpp  EffectManager.cpp  EffectManager.hpp  Effects.hpp  EffectsExtra.hpp
src/Effects/EffectHeaders/: Effect.hpp  Effect_FadingPixels.hpp  Effect_FallingRain.hpp  Effect_Fire.hpp  Effect_Fireworks.hpp  Effect_Glitter.hpp  Effect_Metaballs.hpp  Effect_None.hpp  Effect_Plasma.hpp  Effect_Pong.hpp  Effect_Rainbow.hpp  Effect_Snake.hpp  Effect_SolidColour.hpp  Effect_Text.hpp
src/Effects/EffectList/: AllEffects.hpp  Effect.cpp  Effect.hpp  Effect_None.cpp  Effect_None.hpp  Effect_Rainbow.cpp  Effect_Rainbow.hpp  Effect_SolidColour.cpp  Effect_SolidColour.hpp
src/Effects/EffectSources/: Effect_FadingPixels.cpp  Effect_FallingRain.cpp  Effect_Fire.cpp  Effect_Fireworks.cpp  Effect_Glitter.cpp  Effect_Metaballs.cpp  Effect_None.cpp  Effect_Plasma.cpp  Effect_Pong.cpp  Effect_Rainbow.cpp  Effect_Snake.cpp  Effect_SolidColour.cpp  Effect_Text.cpp
src/ImGui/: ImGuiManager.cpp  ImGuiManager.hpp  ImGuiPanel.hpp
src/LED/: LEDController.cpp  LEDController.hpp  LEDMatrix.cpp  LEDMatrix.hpp  LEDMatrixRenderer.cpp  LEDMatrixRenderer.hpp
src/Panels/: Logger.cpp  Logger.hpp  Settings.cpp  Settings.hpp
src/System/: FreeType.cpp  FreeType.hpp  Socket.hpp
src/Utils/: DiamondSquare.cpp  DiamondSquare.hpp  Helper.hpp  Logger.cpp  Logger.hpp
src/Window/: WindowManager.cpp  WindowManager.hpp  WindowPanel.hpp
(+4 files in other folders)
